--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - docker build -t jostein87/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run jostein87/docker-react npm run test -- --coverage
+    - docker run jostein87/docker-react npm run test 
 
 deploy:
     provider: elasticbeanstalk
